--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -56,7 +56,7 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;
+  background-color: #FF512F;
   background-image: linear-gradient(120deg, #FF512F, #DD2476); }
 
 @media screen and (min-width: 64em) {
