--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,7 +57,7 @@ a {
   color: #fff;
   text-align: center;
   background-color: #FF512F;
-  background-image: linear-gradient(120deg, #FF512F, #DD2476); }
+  background-image: linear-gradient(120deg, #DA22FF, #9733EE); }
 
 @media screen and (min-width: 64em) {
   .page-header {
