--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -56,7 +56,7 @@ a {
       margin-left: 0; } }
 
 .page-header {
-  font-family: SignPainter
+  font-family: SignPainter;
   color: #fff;
   text-align: center;
   background-color: #FF512F;
