--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,6 +57,7 @@ a {
 
 .page-header {
   font-family: SignPainter;
+  font-size: 72px;
   color: #fff;
   text-align: center;
   background-color: #FF512F;
