--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -56,8 +56,8 @@ a {
       margin-left: 0; } }
 
 .page-header {
-  font-family: SignPainter;
-  font-size: 72px;
+//  font-family: SignPainter;
+//  font-size: 72px;
   color: #fff;
   text-align: center;
   background-color: #FF512F;
