--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -60,8 +60,7 @@ a {
 font-size: 72px;*/
   color: #fff;
   text-align: center;
-  background-color: #FF512F;
-  background-image: linear-gradient(120deg, #DA22FF, #9733EE); }
+  background: linear-gradient(120deg, #DA22FF, #9733EE); }
 
 @media screen and (min-width: 64em) {
   .page-header {
