--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -61,7 +61,7 @@ a {
 font-size: 72px;*/
   color: #fff;
   text-align: center;
-  background: linear-gradient(120deg, #DA22FF, #9733EE); }
+  background: linear-gradient(120deg, #360033, #0B8793); }
 
 @media screen and (min-width: 64em) {
   .page-header {
