--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -61,7 +61,7 @@ a {
 font-size: 72px;*/
   color: #fff;
   text-align: center;
-  background: linear-gradient(120deg, #360033, #0B8793); }
+  background: linear-gradient(120deg, #C02425, #F0CB35); }
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -116,7 +116,7 @@ font-size: 72px;*/
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #9733EE; }
+  color: #F0CB35; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
