--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -116,7 +116,7 @@ font-size: 72px;*/
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #C02425; }
+  color: #F0CB35; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
